# public-syntaks-conf-2025

./: .env.example  .gitignore  README.md  pyproject.toml
data/: README.md
data/json_files/: fvn_items 1.json  fvn_items.json
notebooks/: 01 From json dump to parquet with embeddings.ipynb  02 Clustering.ipynb  03 Structured output.ipynb
src/functions/: functions_cleancode.py
src/llm/: setup.py
src/models/: news.py
